add frequency service
